environments/dev/main.tf
module "vpc" {
  source = "../../modulos/vpc"
  cidr_block = "10.10.0.0/16"
  name = "${var.project_name}-vpc"

  public_subnet = "10.10.1.0/24"
  public_subnet_name = "${var.project_name}-public-subnet"
}

resource "aws_security_group" "web_sg" {
  name   = "${var.project_name}-sg"
  vpc_id = module.vpc.vpc_id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

}

resource "aws_instance" "web" {
  ami           = "ami-014d82945a82dfba3"
  instance_type = "t3.micro"
  subnet_id     = module.vpc.public_id
  vpc_security_group_ids = [aws_security_group.web_sg.id]

  tags = {
    Name = "${var.project_name}-ec2"
  }
}

module "deploy_bucket" {
  source = "../../modulos/s3"
  bucket_name = "modbucket74h2i29"
}

module "terraform_state_backend" {
  source = "cloudposse/tfstate-backend/aws"
  version     = "0.38.1"
  namespace  = "portfolio75h5t5"
  stage      = "prod"
  name       = "terraformsa"
  attributes = ["state"]

  terraform_backend_config_file_path = "."
  terraform_backend_config_file_name = "backend.tf"
  force_destroy                      = false
}

output "s3_arn" {
  value = module.deploy_bucket.s3_bucket_arn
}
